# cmserverptf-infrastructure

./: .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  Makefile  README.md  backend.tf  main.tf  monitoring.tf  pyproject.toml  terraform.tfstate.backup  variables.tf
.github/workflows/: application-ci.yml  build-and-deploy.yml  deploy.yml  plan.yml
docs/: architecture.py
functions/visitor-counter/: Dockerfile  app.py  main.py
functions/visitor-counter/tests/: test_app.py
modules/ecs-fargate-service/: main.tf  outputs.tf  variables.tf
modules/lambda-api/: main.tf  outputs.tf  variables.tf
modules/s3-static-website/: main.tf  outputs.tf  variables.tf
src/: index.html
