# pyproject.toml

[tool.poetry]
name = "cmserverptf-infrastructure"
version = "0.1.0"
description = "Infrastructure and code for the cmserverptf portfolio project."
authors = ["cm180697 <camilomateuso@hotmail.com>"]
readme = "README.md"
package-mode = false  # This tells Poetry not to install the root project itself

[tool.poetry.dependencies]
python = "^3.10"
boto3 = ">=1.39.9,<2.0.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
moto = "^5.1.8"
black = "^25.1.0"
flake8 = "^7.3.0"
pre-commit = "^4.2.0"
diagrams = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"